--- a/index.html
+++ b/index.html
@@ -266,13 +266,10 @@
 	</div>
 </div>
 <div class="footer">
-	<div class="footer-top">
-		<img src="./images/footer-backg.jpg" alt="" width='100%'>
-	</div>
 	<div class="footer-bottom">
 		<div class="col-md-4 col-md-offset-4">
-			<p class="col-md-12">鄂ICP备15014024号-1</p>
-			<p class="col-md-12">课件内容版权均归 中国教育信息网 所有</p>
+			<p class="col-md-12">品驾酒有限公司</p>
+			<p class="col-md-12">版权均归 品驾酒有限公司所有</p>
 			<p class="col-md-12">Powered by Ls365 v8.0.7 ©2000-2017</p>
 		</div>
 	</div>
