--- a/index.html
+++ b/index.html
@@ -1,304 +1,274 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<title title="品驾酒">品驾酒-全力打造古井镇第二大白酒品牌</title>
-	<link rel="shortcut icon" type="text/css" href="./images/log.jpg"><!-- 制作title上的小图标 -->
-	<link rel="stylesheet" href="./bs/css/bootstrap.css">
-	<link rel="stylesheet" type="text/css" href="./bs/css/main.css">
-	<link rel="stylesheet" type="text/css" href="./bs/css/Carousel.css">
-	<script src='./bs/js/jquery.js'></script>
-	<script src='./bs/js/bootstrap.js'></script>
-	<script src='./bs/js/Carousel.js'></script>
-</head>
-<body>
-<div class="Navbar">
-	<div class="container">
-		<div class="logo"><a href="#"><img src="./images/log.jpg" alt="" width=60 height = 60></a></div>
-		<ul class="Navbar-ul1 row">
-			<li class="col-md-2"><a href="">首页</a></li>
-			<li class="col-md-2"><a href="">产品中心</a></li>
-			<li class="col-md-2"><a href="">白酒文化</a></li>
-			<li class="col-md-2"><a href="">品驾风采</a></li>
-			<li class="col-md-2"><a href="">关于我们</a></li>
-	</div>
-</div>
-<div class="Carousel">
-	<div class="Carousel-img">
-		<img src="./images/banner01.jpg" height="444px" width='100%'>
-		<img src="./images/banner02.jpg" height="444px" width='100%'>
-	</div>
-	<div class="Pointer-left"><</div>
-	<div class="Pointer-right">></div>
-	<div class="Carousel-dot">
-		<ul>
-			<li></li>
-			<li></li>
-		</ul>
-	</div>
-</div>
-<div class="container">
-	<div class="title1">
-		<div class="title-header">
-		<div class="row">
-			<p class="col-md-5 title-line"></p>
-			<h3 class="col-md-2 text-center">热门产品</h3>
-			<p class="col-md-5 title-line"></p>
-		</div>
-		</div>
-		<div class="title-content">
-			<div class="row">
-				<div class="col-md-3">
-					<div class="thumbnail">
-					<img src="./images/title-1.jpg">
-						<div class="caption">
-						<h4>珍藏原浆</h4>
-						<a href="#">品驾牌-珍藏原浆十六年</a>
-						</span><span class="content-price">￥398.0</span></p>
-						</div>
-					</div>
-				</div>
-				<div class="col-md-3">
-					<div class="thumbnail">
-					<img src="./images/title-2.jpg">
-						<div class="caption">
-						<h4>品驾贡酒</h4>
-						<a href="#">品驾牌-品驾贡酒十年</a>
-						<span class="content-price">￥399.0</span></p>
-						</div>
-					</div>
-				</div>
-				<div class="col-md-3">
-					<div class="thumbnail">
-					<img src="./images/title-3.jpg">
-						<div class="caption">
-						<h4>窖藏老酒</h4>
-						<a href="#">品驾牌-窖藏十年老酒</a>
-						<span class="content-price">￥880.0</span></p>
-						</div>
-					</div>
-				</div>
-				<div class="col-md-3">
-					<div class="thumbnail">
-					<img src="./images/title-4.jpg">
-						<div class="caption">
-						<h4>内部特供</h4>
-						<a href="#">品驾牌-内部接待用酒</a>
-						<span class="content-price">￥188.0</span></p>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-	<div class="title1">
-		<div class="title-header">
-		<div class="row">
-			<p class="col-md-5 title-line"></p>
-			<h3 class="col-md-2 text-center">精品推荐</h3>
-			<p class="col-md-5 title-line"></p>
-		</div>
-		</div>
-		<div class="title-content">
-			<div class="row">
-				<div class="col-md-3">
-					<div class="thumbnail">
-					<img src="./images/title-1.jpg">
-						<div class="caption">
-						<h4>珍藏原浆</h4>
-						<a href="#">品驾牌-珍藏原浆十六年</a>
-						</span><span class="content-price">￥398.0</span></p>
-						</div>
-					</div>
-				</div>
-				<div class="col-md-3">
-					<div class="thumbnail">
-					<img src="./images/title-2.jpg">
-						<div class="caption">
-						<h4>品驾贡酒</h4>
-						<a href="#">品驾牌-品驾贡酒十年</a>
-						<span class="content-price">￥399.0</span></p>
-						</div>
-					</div>
-				</div>
-				<div class="col-md-3">
-					<div class="thumbnail">
-					<img src="./images/title-3.jpg">
-						<div class="caption">
-						<h4>窖藏老酒</h4>
-						<a href="#">品驾牌-窖藏十年老酒</a>
-						<span class="content-price">￥880.0</span></p>
-						</div>
-					</div>
-				</div>
-				<div class="col-md-3">
-					<div class="thumbnail">
-					<img src="./images/title-4.jpg">
-						<div class="caption">
-						<h4>内部特供</h4>
-						<a href="#">品驾牌-内部接待用酒</a>
-						<span class="content-price">￥188.0</span></p>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-	<div class="title3">
-		<div class="title-header">
-		<div class="row">
-			<p class="col-md-5 title-line"></p>
-			<h3 class="col-md-2 text-center">最新动态</h3>
-			<p class="col-md-5 title-line"></p>
-		</div>
-		</div>
-		<div class="title-nav">
-		<div class="row">
-			<div class="col-md-2"><span class="title3-span"></span><span style="margin-left: 10px">最新资讯</span></div>
-			<div class='text-center col-md-1 col-md-offset-8'><button class="btn btn-default btn-sm">更多<span class="glyphicon glyphicon-menu-right"></span></button></div>
-		</div>
 
-		</div>
-		<hr>
-		<ul class="row">
-	        <li class="col-md-6">
-	            <a href="" title="自考学霸练成记：自考升学不只是纯看书！">亳州作为三朝古都，自古享有"酒药之乡"的美誉，酿酒...</a> <span>11-02</span></li>
-	        <li class=" col-md-6">
-	            <a href="" title="为什么老师是最幸福的职业之一？">"品驾"酒秉承古井镇千年传统的酿造工艺，纯手工酿造...</a>
-	            <span>10-31</span></li>
-	        <li class=" col-md-6">
-	            <a href="" title="教育云时代下如何实现智慧化教学">公司施行产品的一体化营销策略，把产品的配送、销售...</a>
-	            <span>10-30</span></li>
-	        <li class=" col-md-6">
-	            <a href="" title="聚焦十九大：为新时代打call，这些事与你息息相关">为进一步开拓全国市场，提高业务的快速反应能力我公司...</a>
-	            <span>10-20</span></li>
-	    </ul>
-	</div>
-	<div class="title4">
-		<div class="title-header">
-		<div class="row">
-			<p class="col-md-5 title-line"></p>
-			<h3 class="col-md-2 text-center">公司领导</h3>
-			<p class="col-md-5 title-line"></p>
-		</div>
-		</div>
-		<div class="title-nav">
-		<div class="row">
-			<div class='text-center col-md-1 col-md-offset-10'><button class="btn btn-default btn-sm">更多<span class="glyphicon glyphicon-menu-right"></span></button></div>
-		</div>
-		</div>
-		<div class="title-content">
-			<div class="row">
-				<div class="col-md-3">
-					<div class="thumbnail">
-						<div class="teacher-header">
-							<div class="teacher-img">
-								<img src="./images/teacher1.jpg" height='100%'>
-							</div>
-							<div class="teacher-content">
-								<h4 class="text-center">孙管</h4>
-								<p class="text-center">董事长</p>
-							</div>
-						</div>
-						<div class="caption">
-							<span style="color: #444">专注白酒十年，公司销售</span>
-							<span style="display: none;"><button class="btn btn-info btn-sm">关注</button>
-							<button class="btn btn-info btn-sm">私信</button></span>
-						</div>
-					</div>
-				</div>
-				<div class="col-md-3">
-					<div class="thumbnail">
-						<div class="teacher-header">
-							<div class="teacher-img">
-								<img src="./images/teacher2.jpg" height='100%'>
-							</div>
-							<div class="teacher-content">
-								<h4 class="text-center">雷明</h4>
-								<p class="text-center">董事</p>
-							</div>
-						</div>
-						<div class="caption">
-							<span style="color: #444">后台支持，运作</span>
-							<span style="display: none;"><button class="btn btn-info btn-sm">关注</button>
-							<button class="btn btn-info btn-sm">私信</button></span>
-						</div>
-					</div>
-				</div>
-				<div class="col-md-3">
-					<div class="thumbnail">
-						<div class="teacher-header">
-							<div class="teacher-img">
-								<img src="./images/teacher3.jpg" height='100%'>
-							</div>
-							<div class="teacher-content">
-								<h4 class="text-center">刘新高</h4>
-								<p class="text-center">董事</p>
-							</div>
-						</div>
-						<div class="caption">
-							<span style="color: #444">公司监管，销售</span>
-							<span style="display: none;"><button class="btn btn-info btn-sm">关注</button>
-							<button class="btn btn-info btn-sm">私信</button></span>
-						</div>
-					</div>
-				</div>
-				<div class="col-md-3">
-					<div class="thumbnail">
-						<div class="teacher-header">
-							<div class="teacher-img">
-								<img src="./images/teacher4.jpg" height='100%'>
-							</div>
-							<div class="teacher-content">
-								<h4 class="text-center">顾连生</h4>
-								<p class="text-center">网络工程师</p>
-							</div>
-						</div>
-						<div class="caption">
-							<span style="color: #444">维护公司网站后台</span>
-							<span style="display: none;"><button class="btn btn-info btn-sm">关注</button>
-							<button class="btn btn-info btn-sm">私信</button></span>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-</div>
-<div class="footer">
-	<div class="footer-bottom">
-		<div class="col-md-4 col-md-offset-4">
-			<p class="col-md-12">品驾酒有限公司</p>
-			<p class="col-md-12">版权均归 品驾酒有限公司所有</p>
-			<p class="col-md-12">Powered by Ls365 v8.0.7 ©2000-2017</p>
-		</div>
-	</div>
-</div>
+<head>
+  <meta charset="UTF-8">
+  <meta name="keywords" content="品驾酒,古井镇白酒,白酒,窖藏老酒,珍藏原浆" />
+  <title title="品驾酒">品驾酒-全力打造古井镇第二大白酒品牌</title>
+  <link rel="shortcut icon" type="text/css" href="./images/log.jpg">
+  <link rel="stylesheet" href="./bs/css/bootstrap.css">
+  <link rel="stylesheet" type="text/css" href="./bs/css/main.css">
+  <link rel="stylesheet" type="text/css" href="./bs/css/public.css">
+  <link rel="stylesheet" type="text/css" href="./bs/css/Carousel.css">
+  <script src='./bs/js/jquery.js'></script>
+  <script src='./bs/js/bootstrap.js'></script>
+  <script src='./bs/js/Carousel.js'></script>
+</head>
+
+<body>
+  <div class="Navbar">
+    <div class="container">
+      <div class="logo"><a href="#"><img src="./images/log.png " alt="" width=70 height = 70></a></div>
+      <ul class="Navbar-ul1 row">
+        <li class="col-md-2"><a href="./index.html">首页</a></li>
+        <li class="col-md-2"><a href="./products.html">产品中心</a></li>
+        <li class="col-md-2"><a href="./culture.html">白酒文化</a></li>
+        <li class="col-md-2"><a href="./about.html">关于我们</a></li>
+      </ul>
+    </div>
+  </div>
+  <div class="Carousel">
+    <div class="Carousel-img">
+      <img src="./images/banner01.jpg" height="444px" width='100%'>
+      <img src="./images/banner02.jpg" height="444px" width='100%'>
+    </div>
+    <div class="Pointer-left"><img src="./images/prev.png" height=5 0></div>
+    <div class="Pointer-right"><img src="./images/next.png" height=5 0></div>
+    <div class="Carousel-dot">
+      <ul>
+        <li></li>
+        <li></li>
+      </ul>
+    </div>
+  </div>
+  <div class="container">
+    <div class="title1">
+      <div class="title-header">
+        <div class="row">
+          <p class="col-md-5 title-line"></p>
+          <h3 class="col-md-2 text-center">热门产品</h3>
+          <p class="col-md-5 title-line"></p>
+        </div>
+      </div>
+      <div class="title-content">
+        <div class="row">
+          <div class="col-md-3">
+            <div class="thumbnail">
+              <img src="./images/title-1.jpg">
+              <div class="caption">
+                <h4>珍藏原浆</h4>
+                <a href="#">品驾牌-珍藏原浆十六年</a>
+                </span><span class="content-price">￥398.0</span></p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="thumbnail">
+              <img src="./images/title-2.jpg">
+              <div class="caption">
+                <h4>品驾贡酒</h4>
+                <a href="#">品驾牌-品驾贡酒十年</a>
+                <span class="content-price">￥399.0</span></p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="thumbnail">
+              <img src="./images/title-3.jpg">
+              <div class="caption">
+                <h4>窖藏老酒</h4>
+                <a href="#">品驾牌-窖藏十年老酒</a>
+                <span class="content-price">￥880.0</span></p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="thumbnail">
+              <img src="./images/title-4.jpg">
+              <div class="caption">
+                <h4>内部特供</h4>
+                <a href="#">品驾牌-内部接待用酒</a>
+                <span class="content-price">￥188.0</span></p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="title1">
+      <div class="title-header">
+        <div class="row">
+          <p class="col-md-5 title-line"></p>
+          <h3 class="col-md-2 text-center">精品推荐</h3>
+          <p class="col-md-5 title-line"></p>
+        </div>
+      </div>
+      <div class="title-content">
+        <div class="row">
+          <div class="col-md-3">
+            <div class="thumbnail">
+              <img src="./images/title-1.jpg">
+              <div class="caption">
+                <h4>珍藏原浆</h4>
+                <a href="#">品驾牌-珍藏原浆十六年</a>
+                </span><span class="content-price">￥398.0</span></p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="thumbnail">
+              <img src="./images/title-2.jpg">
+              <div class="caption">
+                <h4>品驾贡酒</h4>
+                <a href="#">品驾牌-品驾贡酒十年</a>
+                <span class="content-price">￥399.0</span></p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="thumbnail">
+              <img src="./images/title-3.jpg">
+              <div class="caption">
+                <h4>窖藏老酒</h4>
+                <a href="#">品驾牌-窖藏十年老酒</a>
+                <span class="content-price">￥880.0</span></p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="thumbnail">
+              <img src="./images/title-4.jpg">
+              <div class="caption">
+                <h4>内部特供</h4>
+                <a href="#">品驾牌-内部接待用酒</a>
+                <span class="content-price">￥188.0</span></p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="title3">
+      <div class="title-header">
+        <div class="row">
+          <p class="col-md-5 title-line"></p>
+          <h3 class="col-md-2 text-center">最新资讯</h3>
+          <p class="col-md-5 title-line"></p>
+        </div>
+      </div>
+      <div class="title-nav">
+        <div class="row">
+          <div class="col-md-2"><span class="title3-span"></span><span style="margin-left: 10px">最新资讯</span></div>
+          <div class='text-center col-md-1 col-md-offset-8'>
+            <button class="btn btn-default btn-sm"><a href="./culture.html">更多</a><span class="glyphicon glyphicon-menu-right"></span></button>
+          </div>
+        </div>
+      </div>
+      <hr>
+      <ul class="row">
+        <li class="col-md-6">
+          <a href="" title="自考学霸练成记：自考升学不只是纯看书！">亳州作为三朝古都，自古享有"酒药之乡"的美誉，酿酒...</a> <span>11-02</span></li>
+        <li class=" col-md-6">
+          <a href="" title="为什么老师是最幸福的职业之一？">"品驾"酒秉承古井镇千年传统的酿造工艺，纯手工酿造...</a>
+          <span>10-31</span></li>
+        <li class=" col-md-6">
+          <a href="" title="教育云时代下如何实现智慧化教学">公司施行产品的一体化营销策略，把产品的配送、销售...</a>
+          <span>10-30</span></li>
+        <li class=" col-md-6">
+          <a href="" title="聚焦十九大：为新时代打call，这些事与你息息相关">为进一步开拓全国市场，提高业务的快速反应能力我公司...</a>
+          <span>10-20</span></li>
+      </ul>
+    </div>
+    <div class="title4">
+      <div class="title-header">
+        <div class="row">
+          <p class="col-md-5 title-line"></p>
+          <h3 class="col-md-2 text-center">公司领导</h3>
+          <p class="col-md-5 title-line"></p>
+        </div>
+      </div>
+      <div class="title-content">
+        <div class="row">
+          <div class="col-md-3">
+            <div class="thumbnail">
+              <div class="teacher-header">
+                <div class="teacher-img">
+                  <img src="./images/teacher1.jpg" height='100%'>
+                </div>
+                <div class="teacher-content">
+                  <h4 class="text-center">孙管</h4>
+                  <p class="text-center">董事长</p>
+                </div>
+              </div>
+              <div class="caption">
+                <span style="color: #444">专注白酒十年，公司销售</span>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="thumbnail">
+              <div class="teacher-header">
+                <div class="teacher-img">
+                  <img src="./images/teacher2.jpg" height='100%'>
+                </div>
+                <div class="teacher-content">
+                  <h4 class="text-center">雷明</h4>
+                  <p class="text-center">董事</p>
+                </div>
+              </div>
+              <div class="caption">
+                <span style="color: #444">后台支持，运作</span>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="thumbnail">
+              <div class="teacher-header">
+                <div class="teacher-img">
+                  <img src="./images/teacher3.jpg" height='100%'>
+                </div>
+                <div class="teacher-content">
+                  <h4 class="text-center">刘新高</h4>
+                  <p class="text-center">董事</p>
+                </div>
+              </div>
+              <div class="caption">
+                <span style="color: #444">公司监管，销售</span>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="thumbnail">
+              <div class="teacher-header">
+                <div class="teacher-img">
+                  <img src="./images/teacher4.jpg" height='100%'>
+                </div>
+                <div class="teacher-content">
+                  <h4 class="text-center">顾连生</h4>
+                  <p class="text-center">网络工程师</p>
+                </div>
+              </div>
+              <div class="caption">
+                <span style="color: #444">维护公司网站运行</span>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="footer">
+    <div class="footer-bottom">
+      <div class="col-md-4 col-md-offset-4">
+        <p class="col-md-12">品驾酒有限公司</p>
+        <p class="col-md-12">版权均归 品驾酒有限公司所有</p>
+        <p class="col-md-12">Powered by Ls365 v8.0.7 ©2017-2019</p>
+      </div>
+    </div>
+  </div>
 </body>
 <script type="text/javascript">
-$('.Navbar-ul2 .col-md-6 input').focus(function(){
-    $(this).attr({'placeholder':''}).animate({ width: '160px'});
-}).blur(function () {
-    $(this).attr({'placeholder':'搜索课程'}).animate({ width: '100px' });
-});
-$('.Navbar-ul1 .dropdown-menu li').eq(2).click(function(){
-		$(window).scrollTop(1900);
-});
-$('.login').click(function () {
-	$('#myModal').modal('show');
-})
-$('.hmodal').click(function(){
-	$('#myModal').modal('hide');
-})
-$('.thumbnail').css({'position':'relative'});
-$('.title4 .thumbnail').hover(function(){
-	 Sind=$(this).index('.title4 .thumbnail')
-	$('.title4 .thumbnail span').eq(2*Sind).stop().hide();
-	$('.title4 .thumbnail span').eq(2*Sind+1).stop().fadeIn(500);
-},function(){
-	$('.title4 .thumbnail span').eq(2*Sind+1).stop().hide();
-	$('.title4 .thumbnail span').eq(2*Sind).stop().fadeIn(500);
-})
-
+$('.thumbnail').css({ 'position': 'relative' });
 </script>
+
 </html>
