--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
       <img src="./images/banner01.jpg" height="444px" width='100%'>
       <img src="./images/banner02.jpg" height="444px" width='100%'>
     </div>
-    <div class="Pointer-left"><img src="./images/prev.png" height=5 0></div>
-    <div class="Pointer-right"><img src="./images/next.png" height=5 0></div>
+    <div class="Pointer-left"><img src="./images/prev.png" height=50></div>
+    <div class="Pointer-right"><img src="./images/next.png" height=50></div>
     <div class="Carousel-dot">
       <ul>
         <li></li>
