--- a/join.html
+++ b/join.html
@@ -143,5 +143,9 @@
     </div>
   </div>
 </body>
+<script type="text/javascript">
+var Top = parseInt(document.documentElement.clientHeight) - 90;
+$('.footer').css({ 'position': 'absolute', 'top': Top + 'px' })
+</script>
 
 </html>
