--- a/index.html
+++ b/index.html
@@ -288,7 +288,8 @@
   </div>
 </body>
 <script type="text/javascript">
-$('.thumbnail').css({ 'position': 'relative' });
+console.log(document.documentElement.clientHeight);
+console.log(document.documentElement.scrollHeight);
 </script>
 
 </html>
