--- a/about.html
+++ b/about.html
@@ -113,8 +113,11 @@
   </div>
 </body>
 <script type="text/javascript">
-var Top = parseInt(document.documentElement.clientHeight) - 90;
-$('.footer').css({ 'position': 'absolute', 'top': Top + 'px' })
+var Top = parseInt(document.documentElement.clientHeight) - 90
+var DTop = parseInt(document.documentElement.scrollHeight)
+if(Top >= DTop-90){
+  $('.footer').css({ 'position': 'absolute', 'top': Top + 'px' })
+}
 </script>
 
 </html>
