--- a/join.html
+++ b/join.html
@@ -144,8 +144,12 @@
   </div>
 </body>
 <script type="text/javascript">
-var Top = parseInt(document.documentElement.clientHeight) - 90;
-$('.footer').css({ 'position': 'absolute', 'top': Top + 'px' })
+var Top = parseInt(document.documentElement.clientHeight) - 90
+var DTop = parseInt(document.documentElement.scrollHeight)
+console.log(Top,DTop)
+if(Top >= DTop-90){
+  $('.footer').css({ 'position': 'absolute', 'top': Top + 'px' })
+}
 </script>
 
 </html>
