--- a/culture.html
+++ b/culture.html
@@ -233,8 +233,8 @@
   <div class="footer">
     <div class="footer-bottom">
       <div class="col-md-4 col-md-offset-4">
-        <p class="col-md-12">品驾酒有限公司</p>
-        <p class="col-md-12">版权均归 品驾酒有限公司所有</p>
+        <p class="col-md-12">安徽省品驾酒业有限公司</p>
+        <p class="col-md-12">版权均归 安徽省品驾酒业有限公司</p>
         <p class="col-md-12">Copyright © 2019 pinjiajiu. All rights reserved. </p>
       </div>
     </div>
